# sbir-analytics

./: .dockerignore  .env.example  .env.example.staging  .env.server.example  .env.test.aura  .envrc  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ALIGNMENT_REVIEW_VALIDATE_ENRICHMENT.md  API_ACCESS_NOTE.md  ARCHITECTURE_OVERVIEW.md  CET_CLASSIFIER_ANALYSIS.md  CET_CLASSIFIER_INTEGRATION_GUIDE.md  CET_CLASSIFIER_QUICK_REFERENCE.md  CHANGES_SUMMARY.md  CLAUDE.md  CLOUD_INFRASTRUCTURE_SUMMARY.md  CONTRIBUTING.md  COVERAGE_GAP_ANALYSIS.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  Dockerfile  Dockerfile.batch-analysis  Dockerfile.batch-ml  Dockerfile.full  Dockerfile.python-base  Dockerfile.r-base  Dockerfile.serverless  ENVIRONMENT_CONSOLIDATION_SUMMARY.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_TEST_PHASE1_COMPLETE.md  MANIFEST.in  MARKDOWN_DOCUMENTATION_ANALYSIS.md  MIGRATION_COMPLETE.md  Makefile  Makefile.consolidated  (+60 more)
.devcontainer/: devcontainer.json
.github/: CICD_IMPROVEMENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.templates/: how-to-template.md
.zed/: README.md  settings.json  workspace.json
config/: README.md  base.yaml  dev.yaml  docker.yaml  ec2-dev.yaml  prod.yaml  test-aura.yaml  test.yaml
docker/: docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  neo4j.compose.override.yml
docs/: AWS_MIGRATION_EVALUATION.md  CET_CLASSIFIER_COMPARISON_AND_INTEGRATION.md  CI_AURA_SETUP.md  CONGRESSIONAL_DISTRICT_QUICKSTART.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  DOCUMENTATION_CONSOLIDATION_V2_COMPLETE.md  DOCUMENTATION_IMPROVEMENTS.md  DOCUMENTATION_IMPROVEMENTS_V2.md  DOCUMENTATION_IMPROVEMENTS_V3.md  FISCAL_IMPACT_GRANULARITY.md  PAECTER_TESTING_GUIDE.md  PHASE_2_TASKS_QUICK_START.md  SAM_GOV_INTEGRATION.md  TESTING_ENVIRONMENTS_COMPARISON.md  TESTING_MULTI_SOURCE_INTEGRATION.md  TESTING_QUICK_START.md  USASPENDING_CLOUD_INTEGRATION.md  USASPENDING_DEPLOYMENT_CHECKLIST.md  _template.md  ci-data-ml-optimization.md  ci-review-summary.md  cloud-transition-plan.md  commercialization-benchmark-methodology.md  configuration.md  follow-on-multiplier-analysis.md  follow-on-multiplier-reproducibility.md  hypersonics_sbir_policy_brief.md  hypersonics_sbir_transition_findings.md  index.md  leverage-ratio-analysis.md  leverage-ratio-reproducibility.md  leverage-ratio-validation.md  migrations.md  nano_phase3_methodology.md  nanotech_sbir_policy_brief.md  nanotech_sbir_transition_findings.md  neo4j-aura-testing.md  nightly-vs-weekly-strategy.md  performance.md  (+23 more)
examples/: README_ARMY_PROCUREMENT_TRANSITION.md  README_FISCAL_EXAMPLE.md  __init__.py  army_science_technology_awards.csv  army_science_technology_candidates.csv  army_science_technology_opportunities.csv  army_science_technology_report.md  congressional_district_resolution.py  enhanced_matching_demo.py  multi_source_enrichment_demo.py  sbir_fiscal_impact_by_district_example.py  sbir_fiscal_impact_example.py  sbir_fiscal_impact_example_mock.py
infrastructure/cdk/: .gitignore  README.md  SETUP.md  app.py  cdk.context.json  cdk.json  pyproject.toml  requirements.txt  response.json
infrastructure/cdk/stacks/: __init__.py  batch.py  batch_stack.py  config.py  ec2_dev.py  foundation.py  lambda_stack.py  security.py  step_functions_stack.py  storage.py
infrastructure/cdk/tests/: test_batch_stack.py  test_foundation_stack.py
metrics/: sbir_performance_report.json
migration_output/: migration_report_migration_20251030_151922.json  migration_report_migration_20251030_152408.json  migration_report_migration_20251030_152415.json  migration_report_migration_20251030_152650.json
migrations/: __init__.py  base.py  config.py  runner.py
notebooks/: README.md  getting_started.ipynb  getting_started_executed.ipynb
openspec/: project.md
reports/: STEP_13_EVALUATION_REPORT.md  companies_merge_diagnostics.json  company_search_analysis.json  company_search_analysis.md  enrichment_summary.json  patent_etl_validation_report.json  sbir_data_dictionary_analysis.json  sbir_data_dictionary_analysis.md  usaspending_coverage_assessment.json  usaspending_subset_profile.json  usaspending_subset_profile.md  usaspending_subset_profile.summary.md
sbir_etl/: definitions_ml.py  exceptions.py
scripts/: __init__.py  add_fast_markers.py  analyze_company_search.py  analyze_data_dictionary_and_csv.py  analyze_performance_history.py  analyze_uspto_data.py  assess_usaspending_coverage.py  backfill_enrichment_freshness.py  benchmark_enrichment.py  benchmark_transition_detection.py  cleanup-workflows.sh  collect_local_diagnostics.sh  debug_paecter_similarity.py  detect_performance_regression.py  e2e_health_check.py  enrich_ma_with_press.py  explore_r_packages.R  extract_federal_contracts.py  extract_sbir_vendors.py  fix_context_annotations.py  fix_markdown.py  generate_fixture.py  generate_ma_search_queries.py  generate_r_reference_values.R  generate_sbir_sample.py  generate_usaspending_test_data.py  get_usaspending_stats.py  init_cet_baseline.py  launch-ec2-dev.sh  ma_discovery_orchestrator.py  ma_verifier.py  merge_company_search.py  migrate_openspec_to_kiro.py  phase_iii_precision_backtest.py  phase_transition_analysis.py  pipeline_metrics.py  pipeline_status.py  profile_cet_performance.py  profile_sbir_performance.py  profile_usaspending_dump.py  (+34 more)
specs/: REQUIREMENTS_TEMPLATE.md  fiscal-tax-impact-v2.md  status.md
src/: __init__.py  definitions.py  definitions_core.py  definitions_minimal.py  definitions_ml.py  exceptions.py
tasks/: pr-202-review.md  todo.md
tests/: CONTINUATION_PROGRESS.md  FILE_REFACTORING_PLAN.md  FINAL_SUMMARY.md  MEDIUM_PRIORITY_PROGRESS.md  MIGRATION_PROGRESS.md  OPTIMIZATION_SUMMARY.md  PHASE1_COMPLETE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_INDEX.md  REMAINING_TASKS.md  TEST_DATA.md  TEST_IMPROVEMENT_ANALYSIS.md  assertions.py  conftest.py  conftest_neo4j_helper.py  conftest_shared.py  factories.py  neo4j_service.py  test_enrichment_pipeline.py  verify_factories.py
(+2287 files in other folders)
