[project]
name = "sbir-analytics"
version = "0.1.0"
description = "SBIR ETL Pipeline for Neo4j"
authors = [{name = "Conrad Hollomon", email = "conrad.hollomon@pm.me"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "dagster>=1.7.0,<2.0.0",
    "dagster-webserver>=1.7.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "neo4j>=5.20.0,<6.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "jellyfish>=1.0.0,<2.0.0",
    "psutil",
    "memory_profiler",
    "scikit-learn>=1.4.0,<2.0.0",
    "joblib>=1.4.2,<2.0.0",
    "spacy>=3.7.0,<4.0.0",
    "numpy<2",
    "httpx>=0.27.0,<1.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "boto3>=1.34.0,<2.0.0",  # AWS SDK for S3 access
    "cloudpathlib[s3]>=0.23.0,<1.0.0",  # Cloud-agnostic path handling with S3 support
    "huggingface-hub>=0.20.0,<1.0.0",  # PaECTER API client (lightweight, no torch required)
]

[project.optional-dependencies]
r = ["rpy2>=3.5.0,<4.0.0"]  # R integration for fiscal analysis (stateior via rpy2)
paecter-local = [
    "sentence-transformers>=2.7.0,<3.0.0",  # PaECTER local model support
    "torch>=2.0.0,<3.0.0",  # Required by sentence-transformers
    "transformers>=4.35.0,<5.0.0",  # HuggingFace transformers
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pyarrow>=14.0.0,<15.0.0",
    "pyreadstat>=1.1.4,<2.0.0",
    "pandas-stubs>=2.2.0,<3.0.0",
    "types-psutil>=5.9.0,<6.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-tqdm>=4.66.0,<5.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "boto3-stubs[s3]>=1.34.0",  # Type stubs for boto3
    "pre-commit>=3.5.0,<4.0.0",
]
ml = [
    "jupyterlab>=4.0.0,<5.0.0",
    "notebook>=7.0.0,<8.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "ipykernel>=6.29.0,<8.0.0",
]
cloud = [
    "dagster-cloud>=1.7.0,<2.0.0",  # CLI for Serverless deployment
]

[project.scripts]
sbir-cli = "src.cli.main:app"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601", "B608", "B110", "B112", "B603", "B404", "B105", "B106"]  # Skip assert checks, shell usage, SQL injection (using proper escaping), try-except-pass, try-except-continue, subprocess (safe usage), hardcoded password string (false positives for SQL quotes and secret names)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff formatter
    "B008", # do not perform function calls in argument defaults
    "B904", # exception chaining in `raise ... from err` - too verbose for model validators
    "B017", # pytest.raises(Exception) considered evil - but OK for integration tests
    "C901", # too complex
    "E402", # module level import not at top - OK for conditional imports after version checks
    "I001", # import sorting - OK for optional imports in try blocks
]

[tool.ruff.lint.isort]
# Treat neo4j as a known third-party library that gets its own group
known-third-party = ["neo4j"]
# Your project imports
known-first-party = ["src"]
# Allow more flexibility in grouping
split-on-trailing-comma = false
force-single-line = false
# Consistent blank line behavior
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
exclude = [
    "scripts/",
    "tests/",
    "examples/",
    "migrations/",
]
warn_return_any = false
warn_unused_configs = true
# Relaxed settings to allow gradual typing of existing codebase
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
allow_untyped_calls = true
allow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = false
# Suppress import-untyped errors for known modules without stubs
disable_error_code = ["import-untyped", "import-not-found"]
# Enable pydantic plugin for better type checking
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "neo4j.*",
    "duckdb.*",
    "rpy2.*",
    "plotly.*",
    "sklearn.*",
    "scipy.*",
    "spacy.*",
    "loguru.*",
    "rich.*",
    "typer.*",
    "rapidfuzz.*",
    "pyreadstat.*",
    "pyarrow.*",
    "memory_profiler.*",
    "tqdm.*",
    "sentence_transformers.*",
    "torch.*",
    "transformers.*",
    "httpx.*",  # HTTP client library
    "tenacity.*",  # Retry library
    "cloudpathlib.*",  # Cloud storage path library
    "jellyfish.*",  # Phonetic matching library
]
ignore_missing_imports = true

# Override for modules with type stubs but still reporting issues
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "yaml.*",
    "psutil.*",
]
# pandas-stubs, types-PyYAML, and types-psutil are installed but may still report import-untyped
# This is handled by disabling import-untyped globally above

[tool.pytest.ini_options]
markers = [
    "fast: fast unit tests (< 1 second each) - run on every commit",
    "integration: integration tests - run on PR",
    "slow: long-running tests - run nightly",
    "e2e: end-to-end tests - run nightly/weekly",
    "real_data: tests using real data - run weekly",
    "weekly: comprehensive validation - run weekly only",
    "neo4j: tests requiring real Neo4j connection (not mocked)"
]
testpaths = ["tests", "sbir-analytics/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude validation scripts that are standalone scripts, not pytest tests
norecursedirs = ["validation"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html:/tmp/htmlcov"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Parallel execution: Use pytest-xdist for faster test runs
# Run with: pytest -n auto (uses all CPU cores)
# Run with: pytest -n 4 (uses 4 workers)

[tool.dagster]
python_module = "src.definitions"

[tool.dg.project]
root_module = "src"
defs_module = "src.definitions"
code_location_target_module = "src.definitions"
code_location_name = "sbir-analytics-production"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
