[project]
name = "sbir-etl"
version = "0.1.0"
description = "SBIR ETL library — extract, enrich, and transform SBIR/STTR awards data"
authors = [{name = "Conrad Hollomon", email = "conrad.hollomon@pm.me"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"

# Core dependencies: sufficient for ETL library use (extractors, enrichers, transformers).
# Consumer apps can import sbir_etl.extractors/enrichers/transformers with just these.
# For orchestration, CLI, ML, or specific storage backends, install extras below.
dependencies = [
    "pydantic>=2.8.0,<3.0.0",
    "pandas>=2.2.0,<4.0.0",
    "loguru>=0.7.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "numpy>=1.26.0,<3",
    # Data formats (extractors)
    "duckdb>=1.0.0,<2.0.0",
    "pyarrow>=14.0.2,<24.0.0",
    # API clients (enrichers, extractors)
    "httpx>=0.27.0,<1.0.0",
    "tenacity>=8.2.3,<10.0.0",
    # Fuzzy matching (enrichers)
    "rapidfuzz>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
# USPTO SPSS/SAS file extraction
uspto = ["pyreadstat>=1.1.4,<2.0.0"]
# AWS S3 cloud storage (for extractors that pull from S3)
cloud = [
    "boto3>=1.34.0,<2.0.0",
    "cloudpathlib[s3]>=0.23.0,<1.0.0",
]
# Phonetic matching (enrichers — fallback to built-in if absent)
phonetic = ["jellyfish>=1.0.0,<2.0.0"]
# Process memory monitoring (falls back to timing-only if absent)
monitoring = ["psutil>=5.9.0,<7.0.0"]
viz = ["plotly>=5.18.0,<7.0.0"]  # Quality dashboards and HTML reports
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-shard>=0.1.2",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pandas-stubs>=2.2.0,<4.0.0",
    "types-psutil>=5.9.0,<8.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-tqdm>=4.66.0,<5.0.0",
    "boto3-stubs[s3]>=1.34.0",
    "pre-commit>=3.5.0,<5.0.0",
    "testcontainers[neo4j]>=4.0.0,<5.0.0",
]
# Meta-extra for full local stack — installs all first-party packages.
# Use with: uv sync --extra stack-dev  (requires workspace checkout)
stack-dev = [
    "sbir-etl[dev]",
    "sbir-ml",
    "sbir-graph",
    "sbir-rag",
    "sbir-analytics",
]

[tool.uv.sources]
sbir-ml = { path = "packages/sbir-ml", editable = true }
sbir-graph = { path = "packages/sbir-graph", editable = true }
sbir-rag = { path = "packages/sbir-rag", editable = true }
sbir-analytics = { path = "packages/sbir-analytics", editable = true }

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601", "B608", "B110", "B112", "B603", "B404", "B105", "B106"]  # Skip assert checks, shell usage, SQL injection (using proper escaping), try-except-pass, try-except-continue, subprocess (safe usage), hardcoded password string (false positives for SQL quotes and secret names)

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff formatter
    "B008", # do not perform function calls in argument defaults
    "B904", # exception chaining in `raise ... from err` - too verbose for model validators
    "B017", # pytest.raises(Exception) considered evil - but OK for integration tests
    "C901", # too complex
    "E402", # module level import not at top - OK for conditional imports after version checks
    "I001", # import sorting - OK for optional imports in try blocks
]

[tool.ruff.lint.isort]
# Treat neo4j as a known third-party library that gets its own group
known-third-party = ["neo4j"]
# Your project imports
known-first-party = ["sbir_etl", "sbir_ml", "sbir_graph", "sbir_analytics"]
# Allow more flexibility in grouping
split-on-trailing-comma = false
force-single-line = false
# Consistent blank line behavior
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
exclude = [
    "scripts/",
    "tests/",
    "examples/",
    "migrations/",
]
warn_return_any = false
warn_unused_configs = true
# Relaxed settings to allow gradual typing of existing codebase
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
allow_untyped_calls = true
allow_untyped_defs = true
disallow_any_unimported = false
disallow_any_generics = false
# Suppress import-untyped errors for known modules without stubs
disable_error_code = ["import-untyped", "import-not-found"]
# Enable pydantic plugin for better type checking
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "neo4j.*",
    "duckdb.*",
    "plotly.*",
    "sklearn.*",
    "scipy.*",
    "spacy.*",
    "loguru.*",
    "rapidfuzz.*",
    "pyreadstat.*",
    "pyarrow.*",
    "memory_profiler.*",
    "tqdm.*",
    "sentence_transformers.*",
    "torch.*",
    "transformers.*",
    "httpx.*",  # HTTP client library
    "tenacity.*",  # Retry library
    "cloudpathlib.*",  # Cloud storage path library
    "jellyfish.*",  # Phonetic matching library
]
ignore_missing_imports = true

# Override for modules with type stubs but still reporting issues
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "yaml.*",
    "psutil.*",
]
# pandas-stubs, types-PyYAML, and types-psutil are installed but may still report import-untyped
# This is handled by disabling import-untyped globally above

[tool.pytest.ini_options]
markers = [
    "fast: fast unit tests (< 1 second each) - run on every commit",
    "smoke: critical path smoke tests - run first for fast feedback",
    "unit: pure unit tests with no I/O",
    "integration: integration tests - run on PR",
    "slow: long-running tests (>5 seconds) - run nightly",
    "e2e: end-to-end tests - run nightly/weekly",
    "real_data: tests using real data - run weekly",
    "weekly: comprehensive validation - run weekly only",
    "regression: regression prevention tests for known bugs",
    "performance: performance/benchmark tests",
    "transition: tests related to transition detection",
    "fiscal: tests related to fiscal analysis",
    "cet: tests related to CET classification",
    "neo4j: tests requiring real Neo4j connection (not mocked)",
    "requires_s3: tests requiring S3 access",
    "requires_api: tests requiring external API access",
    "requires_aws: tests requiring AWS credentials",
    "requires_neo4j: tests requiring Neo4j driver",
    "requires_bea_api: tests requiring BEA API key",
    "requires_hf: tests requiring HuggingFace token",
    "requires_ml: tests requiring ML dependencies",
    "s3: tests requiring S3 access",
]
testpaths = ["tests", "sbir-analytics/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude validation scripts that are standalone scripts, not pytest tests
norecursedirs = ["validation"]
# Enable parallel execution with pytest-xdist (use -n auto for automatic CPU detection)
# Override with -n 0 to disable parallel execution for debugging
# Use loadgroup to respect @pytest.mark.xdist_group markers
addopts = "-v -n auto --dist=loadgroup"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Parallel execution: Use pytest-xdist for faster test runs
# Run with: pytest -n auto (uses all CPU cores)
# Run with: pytest -n 4 (uses 4 workers)

[tool.dagster]
python_module = "sbir_analytics.definitions"

[tool.dg.project]
root_module = "sbir_analytics"
defs_module = "sbir_analytics.definitions"
code_location_target_module = "sbir_analytics.definitions"
code_location_name = "sbir-analytics-production"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
notebooks = [
    "jupyterlab>=4.0.0,<5.0.0",
    "notebook>=7.0.0,<8.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "ipykernel>=6.29.0,<8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sbir_etl"]
